--- a/css/blocks/logo/logo.less
+++ b/css/blocks/logo/logo.less
@@ -1,10 +1,25 @@
 .logo {
-    display: block;
-    width: 42px;
-    height: 42px;
+	display: block;
+	width: 42px;
+	height: 42px;
 
-    @media @screen-gt-m {
-        width: 50px;
-        height: 50px;
-    }
+	@media @screen-gt-m {
+		width: 50px;
+		height: 50px;
+	}
+
+	&_trigger {
+		width: 40px;
+		height: 40px;
+
+		@media @screen-gt-m {
+			width: 50px;
+			height: 50px;
+		}
+	}
+	
+	&_footer {
+		width: 46px;
+		height: 46px;
+	}
 }
