--- a/css/styles.less
+++ b/css/styles.less
@@ -12,3 +12,9 @@
 @import 'blocks/logo/logo';
 @import 'blocks/nav/nav';
 @import 'blocks/product-card/product-card';
+@import 'blocks/carousel-section/carousel-section';
+@import 'blocks/top-section/top-section';
+@import 'blocks/triggers-section/triggers-section';
+@import 'blocks/footer/footer';
+@import 'blocks/social/social';
+@import 'blocks/apps/apps';
