--- a/css/variables.less
+++ b/css/variables.less
@@ -1,4 +1,6 @@
 @color-dark: #212122;
+@color-text: #333333;
+@color-hell: #666666;
 @color-primary: #0f8fee;
 @color-primary-hover: #3781d0;
 
@@ -14,9 +16,9 @@
 @column-padding-m: 15px;
 @column-padding-l: 15px;
 
-@screen-gt-s: ~'(min-width: 768px)';
-@screen-gt-m: ~'(min-width: 1000px)';
+@screen-gt-s: ~"(min-width: 768px)";
+@screen-gt-m: ~"(min-width: 1000px)";
 
-@screen-only-s: ~'(max-width: 767px)';
-@screen-only-m: ~'(min-width: 768px) and (max-width: 999px)';
-@screen-only-l: ~'(min-width: 1000px)';
+@screen-only-s: ~"(max-width: 767px)";
+@screen-only-m: ~"(min-width: 768px) and (max-width: 999px)";
+@screen-only-l: ~"(min-width: 1000px)";
