--- a/css/styles.less
+++ b/css/styles.less
@@ -18,3 +18,7 @@
 @import 'blocks/footer/footer';
 @import 'blocks/social/social';
 @import 'blocks/apps/apps';
+
+@import 'blocks/popup-order/popup-order';
+@import 'blocks/form/form';
+@import 'blocks/form-order/form-order';
