form-order, приглаживание стилей

--- a/css/blocks/apps/apps.less
+++ b/css/blocks/apps/apps.less
@@ -9,7 +9,7 @@
 		justify-content: flex-start;
 	}
 	
-	&-link {
+	&__link {
 		box-sizing: border-box;
 		display: block;
 		border: 1px solid #cccccc;
