--- a/css/blocks/carousel-section/carousel-section.less
+++ b/css/blocks/carousel-section/carousel-section.less
@@ -81,6 +81,9 @@
 		background: #dfdedd;
 		border-radius: 50%;
 		margin-right: 5px;
+		transition-duration: 0.2s;
+		transition-timing-function: ease;
+		transition-property: background-color;
 		&:last-child {
 			margin-right: 0;
 		}
