--- a/css/blocks/popup-order/popup-order.less
+++ b/css/blocks/popup-order/popup-order.less
@@ -7,4 +7,9 @@
 	@media @screen-gt-m {
 		padding: 40px 0;
 	}
+	&__product {
+		padding-top: 105px;
+		max-width: 290px;
+		margin-left: auto;
+	}
 }
