--- a/css/blocks/footer/footer.less
+++ b/css/blocks/footer/footer.less
@@ -1,25 +1,25 @@
 .footer {
 	background: @color-dark;
 
-	&-links {
-		padding: 30px 0;
-		border-bottom: 1px solid @color-hell;
-	}
-
 	&__logo {
 		text-align: right;
 	}
+}
 
-	&-info {
-		padding: 15px 0 22px;
-		color: #999999;
+.footer-links {
+	padding: 30px 0;
+	border-bottom: 1px solid @color-hell;
+}
 
-		@media @screen-gt-s {
-			padding: 30px 0;
-		}
+.footer-info {
+	padding: 15px 0 22px;
+	color: #999999;
 
-		@media @screen-gt-m {
-			padding: 30px 0 35px;
-		}
+	@media @screen-gt-s {
+		padding: 30px 0;
+	}
+
+	@media @screen-gt-m {
+		padding: 30px 0 35px;
 	}
 }
