--- a/css/blocks/top-section/top-section.less
+++ b/css/blocks/top-section/top-section.less
@@ -13,3 +13,16 @@
 	}
 }
 
+.top-section-nav {
+	font-size: 14px;
+	&__item {
+		margin-left: 20px;
+	}
+	&__link {
+		color: #609fcf;
+		&:hover {
+			color: #c00;
+			text-decoration: none;
+		}
+	}
+}
