--- a/css/blocks/popup-order/popup-order.less
+++ b/css/blocks/popup-order/popup-order.less
@@ -7,6 +7,22 @@
 	@media @screen-gt-m {
 		padding: 40px 0;
 	}
+	&__form {
+		&-title {
+			margin-bottom: 25px;
+		}
+		&-button {
+			width: 50%;
+			max-width: 138px;
+			&_submit {
+				max-width: 100%;
+				width: 100%;
+				@media @screen-gt-s {
+					max-width: 138px;
+				}
+			}
+		}
+	}
 	&__product {
 		padding-top: 105px;
 		max-width: 290px;
