--- a/css/blocks/apps/apps.less
+++ b/css/blocks/apps/apps.less
@@ -8,15 +8,13 @@
 	@media @screen-gt-m {
 		justify-content: flex-start;
 	}
-	
+
 	&__link {
 		box-sizing: border-box;
 		display: block;
 		border: 1px solid #cccccc;
 		margin-right: 8px;
-		transition-duration: 0.2s;
-		transition-timing-function: ease;
-		transition-property: all;
+		transition: all 0.2s ease;
 		max-width: 140px;
 		width: 100%;
 		height: 40px;
