--- a/css/blocks/triggers-section/triggers-section.less
+++ b/css/blocks/triggers-section/triggers-section.less
@@ -19,10 +19,24 @@
 		margin-bottom: 0;
 	}
 
-	&__image {
-		width: 100%;
+	&__icon {
 		max-width: 40px;
+		width: 100%;
+		height: 40px;
 		margin-right: 20px;
+		background-size: cover;
+		background-repeat: no-repeat;
+		box-sizing: border-box;
+
+		&_delivery {
+			background-image: url("icon-delivery.svg");
+		}
+		&_return {
+			background-image: url("icon-return.svg");
+		}
+		&_support {
+			background-image: url("icon-support.svg");
+		}
 
 		@media @screen-gt-s {
 			margin-right: 10px;
@@ -31,6 +45,8 @@
 		@media @screen-gt-m {
 			margin-right: 30px;
 			max-width: 50px;
+			width: 100%;
+			height: 50px;
 		}
 	}
 }
