--- a/css/blocks/product-card/product-card.less
+++ b/css/blocks/product-card/product-card.less
@@ -1,57 +1,63 @@
 .product-card {
-	position: relative;
-	margin-bottom: 20px;
-	text-align: center;
-	cursor: pointer;
+  position: relative;
+  margin-bottom: 20px;
+  text-align: center;
+  cursor: pointer;
 
-	&__image-container {
-		margin-bottom: 10px;
-		font-size: 0;
-		position: relative;
-	}
+  &__image-container {
+    margin-bottom: 10px;
+    font-size: 0;
+    position: relative;
+  }
 
-	&__image {
-		max-width: 100%;
-	}
+  &__image {
+    max-width: 100%;
+  }
 
-	&__name {
-		font: bold 16px/1.2 @font-family-heading;
-		margin-bottom: 10px;
-	}
+  &__name {
+    font: bold 16px/1.2 @font-family-heading;
+    margin-bottom: 10px;
+  }
 
-	&__old-price {
-		color: #aeb5b9;
-		margin-right: 10px;
-		text-decoration: line-through;
-	}
+  &__old-price {
+    color: #aeb5b9;
+    margin-right: 10px;
+    text-decoration: line-through;
+  }
 
-	&__sale {
-		width: 30px;
-		height: 30px;
-		border-radius: 50%;
-		background-color: #212122;
-		text-align: center;
-		color: #fff;
-		font: 12px/30px @font-family-heading;
-		position: absolute;
-		top: 10px;
-		left: 10px;
-	}
-	&__description {
-		margin: 10px 0 15px;
-		color: @color-hell;
-	}
-	&__sizing {
-		&-container {
-			display: flex;
-		}
-		&-button {
-			flex: 1 0 49px;
-			padding: 0;
-			border-right-width: 0;
-			&:last-child {
-				border-right-width: 1px;
-			}
-		}
-	}
+  &__sale {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #212122;
+    text-align: center;
+    color: #fff;
+    font: 12px/30px @font-family-heading;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+  }
+
+  &__description {
+    margin: 10px 0 15px;
+    color: @color-hell;
+  }
+
+  &__sizing {
+    &-container {
+      display: flex;
+    }
+
+    &-box {
+      flex: 1 0 49px;
+    }
+
+    &-button {
+      border-right-width: 0;
+
+      &_last {
+        border-right-width: 1px;
+      }
+    }
+  }
 }
