--- a/css/blocks/top-section/top-section.less
+++ b/css/blocks/top-section/top-section.less
@@ -1,28 +1,33 @@
 .top-section {
-	display: none;
+  display: none;
 
-	@media @screen-gt-s {
-		display: block;
-	}
+  @media @screen-gt-s {
+    display: block;
+  }
 
-	&__content {
-		height: 40px;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
-}
+  &__content {
+    height: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-.top-section-nav {
-	font-size: 14px;
-	&__item {
-		margin-left: 20px;
-	}
-	&__link {
-		color: #609fcf;
-		&:hover {
-			color: #c00;
-			text-decoration: none;
-		}
-	}
+  &__nav {
+    &-list {
+      font-size: 14px;
+    }
+
+    &-item {
+      margin-left: 20px;
+    }
+
+    &-link {
+      color: #609fcf;
+
+      &:hover {
+        color: #c00;
+        text-decoration: none;
+      }
+    }
+  }
 }
