--- a/css/blocks/popup-order/popup-order.less
+++ b/css/blocks/popup-order/popup-order.less
@@ -1,4 +1,5 @@
 .popup-order {
+  background-color: #ffffff;
   padding: 20px 0;
 
   @media @screen-gt-s {
@@ -43,5 +44,34 @@
     padding-top: 105px;
     max-width: 290px;
     margin-left: auto;
+
+    .product-card {
+      &:hover {
+        position: relative;
+        top: 0;
+        left: auto;
+        right: auto;
+        box-shadow: none;
+
+        .product-card__order-button-container {
+          display: none;
+        }
+      }
+    }
+
+    .product-card__description {
+      display: block;
+    }
+
+    .product-card__sizing-container {
+      display: flex;
+    }
+  }
+
+  &__areas {
+    position: absolute;
+    top: -10px;
+    left: 0;
+    z-index: 1;
   }
 }
