--- a/css/common/textarea/textarea.less
+++ b/css/common/textarea/textarea.less
@@ -14,4 +14,16 @@
   &:-ms-input-placeholder {
     color: #aeb5b9;
   }
+
+  &:invalid {
+    border-color: #C52929;
+  }
+
+  &.init {
+    border-color: #dfdedd;
+  }
+
+  // &_error {
+  //   border-color: #C52929;
+  // }
 }
