--- a/css/global.less
+++ b/css/global.less
@@ -4,6 +4,11 @@ body {
   background: #fff;
   font: 14px/1.43 Arial, sans-serif;
   color: @color-text;
+
+  &.no-scroll {
+    height: 100%;
+    overflow: hidden;
+  }
 }
 
 a {
