--- a/css/blocks/form/form.less
+++ b/css/blocks/form/form.less
@@ -16,5 +16,11 @@
   &__label {
     display: flex;
     align-items: center;
+    box-sizing: border-box;
+  }
+
+  &__element {
+    position: relative;
+    box-sizing: border-box;
   }
 }
