--- a/css/common/columns/columns.less
+++ b/css/common/columns/columns.less
@@ -35,6 +35,7 @@
   padding: 0 @column-padding-s;
   flex-shrink: 0;
   flex-grow: 0;
+  position: relative;
 
   @media @screen-gt-s {
     width: @column-width-m;
