--- a/css/common/input/input.less
+++ b/css/common/input/input.less
@@ -6,6 +6,7 @@
   padding: 0 10px;
   outline: none;
   font: 14px/1.43 Arial, sans-serif;
+  -webkit-appearance: none;
 
   &::placeholder {
     color: #aeb5b9;
@@ -19,23 +20,27 @@
     border-color: #0f8fee;
   }
 
-  &_error {
+  &:invalid {
     border-color: #c52929;
   }
+
+  &.init {
+    border-color: #dfdedd;
+  }
+
+  // &_error {
+  //   border-color: #c52929;
+  // }
 
   &_phone-pre {
     width: 38px;
     border-right-width: 0;
 
-    &::placeholder {
-      color: @color-text;
-    }
-
-    &:-ms-input-placeholder {
-      color: @color-text;
-    }
-
     &:focus {
+      border-right-width: 1px;
+    }
+
+    &:invalid {
       border-right-width: 1px;
     }
   }
@@ -47,9 +52,36 @@
     &:focus {
       border-right-width: 1px;
     }
+
+    &:invalid {
+      border-right-width: 1px;
+    }
   }
 
   &_phone-number {
     width: 100%;
+  }
+}
+
+.input-suggests {
+  background: #FFFFFF;
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  box-sizing: border-box;
+  cursor: pointer;
+  transition: all 0.2s ease;
+
+  &__item {
+    box-sizing: border-box;
+    min-height: 38px;
+    padding: 10px;
+    line-height: 1.15;
+    color: @color-text;
+    transition: all 0.2s ease;
+    &:hover {
+      background: #0F8FEE;
+      color: #FFFFFF;
+      transition: all 0.2s ease;
+    }
   }
 }
