--- a/css/styles.less
+++ b/css/styles.less
@@ -25,6 +25,7 @@
 @import "blocks/social/social";
 @import "blocks/apps/apps";
 
+@import "blocks/popup-order/popup";
 @import "blocks/popup-order/popup-order";
 
 @import "blocks/form/form";
