homework 2, second commit

--- a/css/styles.less
+++ b/css/styles.less
@@ -25,7 +25,8 @@
 @import "blocks/social/social";
 @import "blocks/apps/apps";
 
-@import "blocks/popup-order/popup";
-@import "blocks/popup-order/popup-order";
+@import "blocks/popups/popup";
+@import "blocks/popups/popup-order";
+@import "blocks/popups/popup-preorder";
 
 @import "blocks/form/form";
