--- a/css/blocks/popups/popup-order.less
+++ b/css/blocks/popups/popup-order.less
@@ -10,6 +10,11 @@
     padding: 40px 0;
   }
 
+  &__card {
+    text-align: center;
+    max-width: 100%;
+  }
+
   &__form {
     &-title {
       margin-bottom: 25px;
