--- a/css/blocks/product-card/product-card.less
+++ b/css/blocks/product-card/product-card.less
@@ -5,13 +5,11 @@
   cursor: pointer;
   max-width: 100%;
   background: #ffffff;
-  top: 0;
-  left: auto;
-  right: auto;
-  box-shadow: none;
+  // top: 0;
+  // left: auto;
+  // right: auto;
+  // box-shadow: none;
   padding: 0 0 20px;
-  transition: all 0.5s ease;
-  // min-height: 370px;
 
   &__image-container {
     margin-bottom: 10px;
@@ -63,7 +61,6 @@
   &__sizing {
     &-container {
       display: none;
-      padding: 0 20px;
     }
 
     &-box {
@@ -88,37 +85,16 @@
 
   &__order-button {
     width: 100%;
+    opacity: 1;
+    display: none;
+    margin-top: 15px;
 
-    &-container {
-      display: none;
-      margin-top: 15px;
-      padding: 0 20px;
-    }
-  }
-
-  &:hover {
-    position: absolute;
-    top: 0;
-    left: 15px;
-    right: 15px;
-    box-shadow: 0px 25px 35px rgba(0, 0, 0, 0.1);
-    z-index: 1;
-    transition: all 0.5s ease;
-  }
-
-  &:hover & {
-    &__description {
-      display: block;
-    }
-
-    &__sizing {
-      &-container {
-        display: flex;
+    &.disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+      &:hover {
+        background: @color-primary;
       }
-    }
-
-    &__order-button-container {
-      display: block;
     }
   }
 }
