--- a/css/blocks/popups/popup.less
+++ b/css/blocks/popups/popup.less
@@ -10,6 +10,7 @@
   transform: translateZ(0);
   width: 100%;
   z-index: 9998;
+  overflow-x: hidden;
   overflow-y: auto;
   background-color: transparent;
   transition: all 0.5s ease;
@@ -39,5 +40,6 @@
   &__content {
     width: 100%;
     overflow: hidden;
+    position: relative;
   }
 }
