--- a/css/blocks/popups/popup-order.less
+++ b/css/blocks/popups/popup-order.less
@@ -1,13 +1,16 @@
 .popup-order {
   background-color: #ffffff;
-  padding: 20px 0;
+  
+  & .popup-content {
+    padding: 20px 0;
 
-  @media @screen-gt-s {
-    padding: 30px 0;
-  }
-
-  @media @screen-gt-m {
-    padding: 40px 0;
+    @media @screen-gt-s {
+      padding: 30px 0;
+    }
+  
+    @media @screen-gt-m {
+      padding: 40px 0;
+    }
   }
 
   &__card {
