дополнения по комментариям

--- a/css/blocks/form/form.less
+++ b/css/blocks/form/form.less
@@ -11,6 +11,7 @@
     display: flex;
     margin-bottom: 10px;
     box-sizing: border-box;
+    position: relative;
   }
 
   &__label {
@@ -19,8 +20,31 @@
     box-sizing: border-box;
   }
 
+  &__label-wrapper {
+    position: relative;
+    box-sizing: border-box;
+    &:last-child {
+      flex: 1;
+    }
+
+  }
+
   &__element {
     position: relative;
     box-sizing: border-box;
+  }
+
+  &__note {
+    box-sizing: border-box;
+    position: absolute;
+    bottom: -22px;
+    z-index: 1;
+    background: pink;
+    display: block;
+    font-size: 10px;
+    border-radius: 5px;
+    padding: 5px 10px;
+    left: 10px;
+    width: 270px;
   }
 }
