--- a/css/global.less
+++ b/css/global.less
@@ -36,3 +36,12 @@ ul {
   padding: 0;
   list-style: none;
 }
+
+.hidden {
+  display: none;
+}
+
+.visuallyhidden {
+  opacity: 0;
+  transition: opacity .1s;
+}
