--- a/css/blocks/popups/popup-order.less
+++ b/css/blocks/popups/popup-order.less
@@ -1,11 +1,16 @@
 .popup-order {
-  background-color: #ffffff;
+  background-color: rgba(60, 60, 60, 0.5);
   
-  & .popup-content {
+  & .popup__content {
     padding: 20px 0;
+    max-width: 1010px;
+    top: 0;
+    transform: translateX(-50%);
 
     @media @screen-gt-s {
       padding: 30px 0;
+      top: 50%;
+      transform: translate(-50%, -50%);
     }
   
     @media @screen-gt-m {
