--- a/css/blocks/popups/popup.less
+++ b/css/blocks/popups/popup.less
@@ -41,5 +41,10 @@
     width: 100%;
     overflow: hidden;
     position: relative;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: #ffffff;
   }
 }
