--- a/css/common/input/input.less
+++ b/css/common/input/input.less
@@ -20,17 +20,14 @@
     border-color: #0f8fee;
   }
 
-  &:invalid {
+  &:invalid,
+  &.error {
     border-color: #c52929;
   }
 
   &.init {
     border-color: #dfdedd;
   }
-
-  // &_error {
-  //   border-color: #c52929;
-  // }
 
   &_phone-pre {
     width: 38px;
@@ -40,7 +37,8 @@
       border-right-width: 1px;
     }
 
-    &:invalid {
+    &:invalid,
+    &.error {
       border-right-width: 1px;
     }
   }
@@ -53,7 +51,8 @@
       border-right-width: 1px;
     }
 
-    &:invalid {
+    &:invalid,
+    &.error {
       border-right-width: 1px;
     }
   }
@@ -78,6 +77,7 @@
     line-height: 1.15;
     color: @color-text;
     transition: all 0.2s ease;
+
     &:hover {
       background: #0F8FEE;
       color: #FFFFFF;
