second commit, правки

--- a/css/blocks/header/header.less
+++ b/css/blocks/header/header.less
@@ -36,11 +36,11 @@
   text-indent: -9999px;
 
   &_search {
-    background-image: url("search-icon.svg");
+    background-image: url("css/blocks/header/search-icon.svg");
   }
 
   &_login {
-    background-image: url("login-icon.svg");
+    background-image: url("css/blocks/header/login-icon.svg");
 
     @media @screen-gt-s {
       display: none;
@@ -48,7 +48,7 @@
   }
 
   &_menu {
-    background-image: url("menu-icon.svg");
+    background-image: url("css/blocks/header/menu-icon.svg");
   }
 }
 
