--- a/css/blocks/triggers-section/triggers-section.less
+++ b/css/blocks/triggers-section/triggers-section.less
@@ -30,15 +30,15 @@
     box-sizing: border-box;
 
     &_delivery {
-      background-image: url("icon-delivery.svg");
+      background-image: url("css/blocks/triggers-section/icon-delivery.svg");
     }
 
     &_return {
-      background-image: url("icon-return.svg");
+      background-image: url("css/blocks/triggers-section/icon-return.svg");
     }
 
     &_support {
-      background-image: url("icon-support.svg");
+      background-image: url("css/blocks/triggers-section/icon-support.svg");
     }
 
     @media @screen-gt-s {
