--- a/css/common/checkbox/checkbox.less
+++ b/css/common/checkbox/checkbox.less
@@ -14,7 +14,7 @@
 
   &:checked+& {
     &-box {
-      background: url("check.svg") no-repeat center center;
+      background: url("css/common/checkbox/check.svg") no-repeat center center;
     }
   }
 }
