--- a/css/common/radio/radio.less
+++ b/css/common/radio/radio.less
@@ -18,7 +18,7 @@
   &:checked+& {
     &-box {
       border: none;
-      background: url("radio.svg") no-repeat center center;
+      background: url("css/common/radio/radio.svg") no-repeat center center;
     }
   }
 
