--- a/css/common/select/select.less
+++ b/css/common/select/select.less
@@ -9,7 +9,7 @@
   height: 38px;
   padding: 0 0 0 10px;
   -webkit-appearance: none;
-  background-image: url("arrow.svg");
+  background-image: url("css/common/select/arrow.svg");
   background-repeat: no-repeat;
   background-position: right center;
   cursor: pointer;
